--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,6 +19,7 @@
     <link rel="stylesheet" href="styles/whole.css">
     <title>Services - Erwin Hadjirul - Personal Portfolio</title>
 </head>
+
 <body>
 
     <nav>
@@ -36,16 +38,19 @@
         </ul>
     </nav>
 
-    <header><h1>Services</h1></header>
+    <header>
+        <h1>Services</h1>
+    </header>
 
     <main>
         <!-- Web Development -->
         <h2 class="text-white h2-lower" id="webDeveloper">Web Development</h2>
         <section class="webdev">
-            <div class="upper-img" style="background: url(raw-data/svg/ASP.NET.svg);"></div>
+            <div class="upper-img" style="background: url(raw-data/svg/ASP.NET.svg); background-size: contain;"></div>
             <div class="lower-content">
                 <h3 class="text-white text-center bold">Web Developer</h3>
-                <h3 class="text-white text-center"><span class="bold">Technology:</span> C#, ASP.NET, HTML, CSS, JS, Bootstrap and SQL</h3>
+                <h3 class="text-white text-center"><span class="bold">Technology:</span> C#, ASP.NET, HTML, CSS, JS,
+                    Bootstrap and SQL</h3>
                 <div class="boundary mr-25">2022 &ndash; Present</div>
             </div>
             <div class="lower-content">
@@ -55,8 +60,10 @@
                 <p class="text-white text-justice">
                     - The process of developing and maintaining websites. It is the work behind the looking great, fast
                     and well performance website with a faultless user experience. <br><br>
-                    - Web Development Skills are in high demand worldwide and well paid too. Although learning how to code is not easy,
-                    however acquiring this knowledge would be worth it. Among many great advantages of having this knowledge is you
+                    - Web Development Skills are in high demand worldwide and well paid too. Although learning how to
+                    code is not easy,
+                    however acquiring this knowledge would be worth it. Among many great advantages of having this
+                    knowledge is you
                     don't need to have College Degree to be qualified. <br><br>
                     - Technologies I use: C#, ASP.NET, HTML, CSS, JS, Bootstrap and SQL.
                 </p>
@@ -69,8 +76,10 @@
                 <h3 class="text-white left ml-25 bold">Frontend Web Development</h3>
                 <p class="text-white text-justice">
                     - The process of developing and designing the visual aspect of a website. <br><br>
-                    - The computer tools mainly used to complete the Frontend of a website are HTML (A Markup Computer Language),
-                    CSS (A Designer Computer Language) and JavaScript or JS (A Programming Language made for Web Development). <br><br>
+                    - The computer tools mainly used to complete the Frontend of a website are HTML (A Markup Computer
+                    Language),
+                    CSS (A Designer Computer Language) and JavaScript or JS (A Programming Language made for Web
+                    Development). <br><br>
                     - Technologies I use: HTML, CSS, JS and Bootstrap.
                 </p>
                 <div class="text-justice">
@@ -84,7 +93,8 @@
                     - The process of developing and ensuring the integrity of the server, application and
                     database of the website smoothly. The server is for hosting the website, the application is
                     to make the website up and running and the database is for data storage. <br><br>
-                    - The computer tools mainly used to complete the Backend of a Website are Programming Langugages made for Web Development.
+                    - The computer tools mainly used to complete the Backend of a Website are Programming Langugages
+                    made for Web Development.
                     Those are PHP, JavaScript, C# with ASP.NET and many more. <br><br>
                     - Technologies I use: C#, ASP.NET and SQL.
                 </p>
@@ -104,8 +114,10 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Web Application</h3>
                 <p class="text-white text-justice">
-                    - A piece of application software that can be accessed by browser in the internet. It is the combination of
-                    server-side and client-side scripts to present data and a server to manage the request from the users and the
+                    - A piece of application software that can be accessed by browser in the internet. It is the
+                    combination of
+                    server-side and client-side scripts to present data and a server to manage the request from the
+                    users and the
                     response to the users.
                 </p>
             </div>
@@ -114,7 +126,7 @@
         <!-- Computer Application Development -->
         <h2 class="text-white h2-lower" id="desktopAppDeveloper">Computer Application Development</h2>
         <section class="webdev">
-            <div class="upper-img" style="background: url(raw-data/img/cs.png);"></div>
+            <div class="upper-img" style="background: url(raw-data/img/cs.png); background-size: contain;"></div>
             <div class="lower-content">
                 <h3 class="text-white text-center bold">Software Developer</h3>
                 <h3 class="text-white text-center"><span class="bold">Technology:</span> C# and SQL</h3>
@@ -129,7 +141,8 @@
                     Some are native applications which are written for specific Operating System of Computers,
                     and others are cross-platform which can be ran in different Operating Systems. <br><br>
                     - It does not require any internet connection to run, and they must be downloaded to your
-                    computer in order to run. Also, it can access some of the computers internal system software. <br><br>
+                    computer in order to run. Also, it can access some of the computers internal system software.
+                    <br><br>
                     - Technologies I use: C# and SQL.
                 </p>
                 <div class="text-justice">
@@ -141,38 +154,44 @@
                 <br>
                 <h3 class="text-white left ml-25 bold">Console Application Development</h3>
                 <p class="text-white text-justice">
-                    - A Computer Program or Application designed to be used via Computer Command-line Interface (CLI), such as
+                    - A Computer Program or Application designed to be used via Computer Command-line Interface (CLI),
+                    such as
                     text terminal and command prompt. Some are native applications which are
                     written for specific Operating System of Computers, and others are cross-platform which can be ran
                     in different Operating Systems. <br><br>
-                    - Every beginner developer or programmer is required to start learning Programming in this field, because this field is
-                    easy to grasp and all of the programming concepts can be applied here. And also, you can focus on learning the programming language's
-                    fundamentals, data structures and algorithms and not be distracted by other User Interface knowledges. <br><br>
+                    - Every beginner developer or programmer is required to start learning Programming in this field,
+                    because this field is
+                    easy to grasp and all of the programming concepts can be applied here. And also, you can focus on
+                    learning the programming language's
+                    fundamentals, data structures and algorithms and not be distracted by other User Interface
+                    knowledges. <br><br>
                     - Technology I use: C#.
                 </p>
                 <div class="text-justice">
                     <p>Sample Project:</p>
                     <br>
                     - <a class="improved-link" href="projects.html#guess-game">Guess Game CLI</a><br>
-                    - <a class="improved-link" href="projects.html#student-management-cli">Student Record Management CLI</a>
+                    - <a class="improved-link" href="projects.html#student-management-cli">Student Record Management
+                        CLI</a>
                 </div>
                 <br>
                 <h2 class="text-white left ml-20 bold">Additional Information:</h3>
-                <br>
-                <h3 class="text-white left ml-25 bold">User Interface</h3>
-                <p class="text-white text-justice">
-                    - The place or point where human or users can interact and communicate with computer.
-                </p>
-                <br>
-                <h3 class="text-white left ml-25 bold">Command-line Interface</h3>
-                <p class="text-white text-justice">
-                    - User interface where commands or texts are the only available users used to communicate with computers.
-                </p>
-                <br>
-                <h3 class="text-white left ml-25 bold">Graphical User Interface</h3>
-                <p class="text-white text-justice">
-                    - User interface where users communicate with computers in a graphical and visual way.
-                </p>
+                    <br>
+                    <h3 class="text-white left ml-25 bold">User Interface</h3>
+                    <p class="text-white text-justice">
+                        - The place or point where human or users can interact and communicate with computer.
+                    </p>
+                    <br>
+                    <h3 class="text-white left ml-25 bold">Command-line Interface</h3>
+                    <p class="text-white text-justice">
+                        - User interface where commands or texts are the only available users used to communicate with
+                        computers.
+                    </p>
+                    <br>
+                    <h3 class="text-white left ml-25 bold">Graphical User Interface</h3>
+                    <p class="text-white text-justice">
+                        - User interface where users communicate with computers in a graphical and visual way.
+                    </p>
             </div>
         </section>
         <div class="h2-lower"></div>
@@ -184,14 +203,16 @@
                 <img class="logo" height="50px" src="raw-data/img/icon.png" alt="Erwin Hadjirul">
             </div>
             <div class="col">
-                <h3>Address <div class="underline"><span></span></div></h3>
+                <h3>Address <div class="underline"><span></span></div>
+                </h3>
                 <p>Brgy. Takut-takut</p>
                 <p>Jolo, Sulu, Philippines</p>
                 <p class="email"><a href="mailto:erwinhadjirul15@gmail.com">erwinhadjirul15@gmail.com</a></p>
                 <h4>+63981-618-1943</h4>
             </div>
             <div class="col">
-                <h3>Social Medias <div class="underline"><span></span></div></h3>
+                <h3>Social Medias <div class="underline"><span></span></div>
+                </h3>
                 <div class="social-icons">
                     <a target="_blank" href="https://github.com/Erwin-Hadjirul">
                         <img height="20px" src="raw-data/svg/Github - Colorful.svg">
@@ -203,8 +224,9 @@
             </div>
         </div>
         <hr class="copyright-line">
-        <p class="text-center">&copy; 2022 - Erwin Hadjirul - Personal Portfolio</p>
+        <p class="text-center">&copy; 2023 - Erwin Hadjirul - Personal Portfolio</p>
     </footer>
 
 </body>
+
 </html>
