--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,6 +18,7 @@
     <link rel="stylesheet" href="styles/style.css">
     <title>Erwin Hadjirul - Personal Portfolio</title>
 </head>
+
 <body>
 
     <nav>
@@ -33,7 +35,9 @@
         </ul>
     </nav>
 
-    <header><h1>Home</h1></header>
+    <header>
+        <h1>Home</h1>
+    </header>
 
     <main>
         <div class="whole hero hero-supp">
@@ -54,14 +58,16 @@
                 <img class="logo" height="50px" src="raw-data/img/icon.png" alt="Erwin Hadjirul">
             </div>
             <div class="col">
-                <h3>Address <div class="underline"><span></span></div></h3>
+                <h3>Address <div class="underline"><span></span></div>
+                </h3>
                 <p>Brgy. Takut-takut</p>
                 <p>Jolo, Sulu, Philippines</p>
                 <p class="email"><a href="mailto:erwinhadjirul15@gmail.com">erwinhadjirul15@gmail.com</a></p>
                 <h4>+63981-618-1943</h4>
             </div>
             <div class="col">
-                <h3>Social Medias <div class="underline"><span></span></div></h3>
+                <h3>Social Medias <div class="underline"><span></span></div>
+                </h3>
                 <div class="social-icons">
                     <a target="_blank" href="https://github.com/Erwin-Hadjirul">
                         <img height="20px" src="raw-data/svg/Github - Colorful.svg">
@@ -73,7 +79,8 @@
             </div>
         </div>
         <hr class="copyright-line">
-        <p class="text-center">&copy; 2022 - Erwin Hadjirul - Personal Portfolio</p>
+        <p class="text-center">&copy; 2023 - Erwin Hadjirul - Personal Portfolio</p>
     </footer>
 </body>
+
 </html>
