Updated and checked the exact date for projects I worked on in 1yr-pbts.html

--- a/exp-pages/1yr-pbts.html
+++ b/exp-pages/1yr-pbts.html
@@ -99,7 +99,7 @@
                     for this software is quite complex. I won't explain it in details.<br>
                     I developed this in C# Programming Language, Visual Studio 2022 and ASP.NET Core 6 (MVC) Framework.
                 </p>
-                <h6>June, 2023</h6>
+                <h6>June &ndash; July, 2023</h6>
             </div>
 
             <div class="exp-box centerer">
@@ -129,7 +129,7 @@
                     development
                     platform and framework.
                 </p>
-                <h6>May, 2023</h6>
+                <h6>June, 2023</h6>
             </div>
 
             <div class="exp-box centerer">
