New Update for 2023 (2)

--- a/exp-pages/1yr-pbts.html
+++ b/exp-pages/1yr-pbts.html
@@ -31,8 +31,8 @@
             <img class="icon" height="60px" src="../raw-data/img/icon.png" alt="Erwin Hadjirul">
         </a>
         <ul class="nav-links">
-            <li><a href="1yr-leepe.html">Leepe</a></li>
             <li><a href="1yr-pbts.html">PBTS</a></li>
+            <!--<li><a href="1yr-leepe.html">Leepe</a></li>-->
         </ul>
     </nav>
 
@@ -49,7 +49,10 @@
             </a>
             <div>
                 <h2>Pro Board Technology Services</h2>
-                <h5 class="text-center">The company where I first work as Programmer.</h5>
+                <h5 class="text-center">
+                    The company where I first work as Programmer but the
+                    first Company that hired me is Leepe Company.
+                </h5>
                 <h6 class="text-center">January &ndash; June, 2023</h6>
             </div>
 
@@ -60,9 +63,11 @@
                 <h2>PBTS Company</h2>
                 <p class="exp-para">
                     I learned many things here as a Programmer and Software Bug Hunter. Haha!<br>
-                    You may confused about what I said above that this is the place I first work as Programmer but the
-                    first Company that hired me is Leepe Company. It is because Leepe Company is also an Outsourcing
-                    Company. It outsourced me to PBTS as Software Support and I lived in Carmona, Cavite for 6 Months.
+                    You are maybe confused about what I said above that this is the place I first work as Programmer but
+                    the
+                    first Company that hired me is Leepe Company. It is because Leepe Company is an Outsourcing
+                    Company. It outsourced me to PBTS as Software Support and made me live in Carmona, Cavite for 6
+                    Months.
                 </p>
             </div>
 
@@ -72,7 +77,7 @@
                 </a>
                 <h2>E-Maintenance System</h2>
                 <p class="exp-para">
-                    The first existing system in PBTS Company that I supported. What I do is upgrading the
+                    The first existing system in PBTS Company that I supported. My works here are upgrading the
                     app depends on the Client's Concerns and fixing the app if something is wrong or unnecessary
                     within the software.<br>
                     It is a complex system that is developed in Visual Basic Programming Language, Visual Studio
@@ -80,26 +85,6 @@
                     I am still supporting this Software until my Contract in PBTS is over.
                 </p>
                 <h6>January &ndash; June, 2023</h6>
-            </div>
-
-            <div class="exp-box centerer">
-                <a href="../raw-data/img/exp/pbts-scheduling.png" target="_blank">
-                    <img class="exp-img" src="../raw-data/img/exp/pbts-scheduling.png">
-                </a>
-                <h2>PBTS' Scheduling Management System</h2>
-                <p class="exp-para">
-                    I became a friend with one of my co-worker in PBTS and he always ask me about the Lunchtime Schedule
-                    which is only written in Excel File that is sent to us through Email from PBTS' Heads.
-                    With that event, something came up to my mind that I want to make my exit in PBTS COOL. Haha!<br>
-                    To make my exit cool, I start making this system for free for him and whole PBTS as an automatic
-                    Schedule Teller.<br>
-                    The software produces sound when Lunch Time is on/off and when afternoon breaktime is on/off
-                    for different departments in PBTS.<br>
-                    Though this is not a complex system but I had a hard time making this because the data relationship
-                    for this software is quite complex. I won't explain it in details.<br>
-                    I developed this in C# Programming Language, Visual Studio 2022 and ASP.NET Core 6 (MVC) Framework.
-                </p>
-                <h6>June &ndash; July, 2023</h6>
             </div>
 
             <div class="exp-box centerer">
@@ -154,8 +139,7 @@
                 <p class="exp-para">
                     The name of the department where I in in PBTS is BSS (Business System Support), and the Head there
                     is a
-                    Windows Programmer for a long time. And he is also developing while managing us. When I was there,
-                    he always
+                    Windows Programmer for a long time. And he is also developing while managing us. He always
                     ask me to make a single Windows Form from Visual Studio 2010 and C# Programming Language, to add to
                     the Windows
                     Software he is currently developing.<br> This BIB Tester is the first Windows Form I made in PBTS.
