--- a/projects.html
+++ b/projects.html
@@ -53,23 +53,24 @@
                     PNG) and Icons (SVG). <br>
                     - The Logo of the website emphasizes RGB (Red, Green, Blue) and the name of the owner.
                     The footer specifies the addresses, social medias and the `copyright owner` of the owner for some
-                    information purposes.
+                    informational purposes.
                     In the `Home` Section, the name and the picture of the owner of this Website are present. There is a
                     button below the Name,
-                    written `Hire Me`, clicking it would redirect the control to Email App. The will lead to the
-                    explanation of primary reason for developing this
-                    website which is to showcase the owner's skills in website development. At the back of the picture
+                    written `Hire Me`, clicking it would redirect the control to Email App. At the back of the picture
                     of owner of the website shows the primary
                     Programming Language the owner uses in his Programming Career.
                     In the `Services` Section showcases the services offered by the owner as a Programmer with proof of
                     every service.
                     In the `Projects` Section lists the Projects the owner have worked on including the project's
-                    metadata and pictures.
+                    metadata
+                    and pictures. But these are just few Projects the owner created just to showcase his ability to
+                    develop.
                     In the `About Me` Section introduces the owner of the website. This section formalized like
                     Resume/CV.
-                    On the Education Part, when a card is being clicked, the control will redirect to the Education
-                    Section with whole new
-                    different composition of some part of the website but same styles.
+                    On the Education and Experience Part, when a card is clicked, the control will redirect to the
+                    Education or Experience Sections, respectively
+                    with whole new
+                    different composition of some part of the website but same theme.
                 </li>
                 <li><span class="bold bg-blue">Year:</span><br> 2022</li>
                 <li><span class="bold bg-blue">Repository:</span><br> <a class="improved-link-white"
@@ -255,7 +256,7 @@
                     building Cross-platform Mobile Application.
                     It is now then updated to .NET MAUI (Multi-platform Application User Interface) Framework. <br>
                     - The app has a logo (You can see that at the first list on the following App Pictures) but it has
-                    not Splash Screen, because this app
+                    no Splash Screen, because this app
                     was created when its developer isn't that great in App Development, he is just been forced to
                     develop for School Thesis Purposes.
                     The app has the following features: Dark Mode; Offline, No Ads and Free; Easy to Understand and Use;
