--- a/about-me.html
+++ b/about-me.html
@@ -83,7 +83,7 @@
         <!-- Skills -->
         <h2 class="text-white">Skills</h2>
         <section class="cards">
-            <a class="card" href="services.html#webDeveloper">
+            <a class="card" href="services.html#web-developer">
                 <div class="card-image" style="background: url(raw-data/svg/ASP.NET.svg);"></div>
                 <div class="card-content">
                     <div class="card-title">Web Development</div>
@@ -94,7 +94,7 @@
                     <div class="card-readmore">2022 &ndash; Present</div>
                 </div>
             </a>
-            <a class="card" href="services.html#desktopAppDeveloper">
+            <a class="card" href="services.html#desktop-app-developer">
                 <div class="card-image" style="background: url(raw-data/img/cs.png); background-size: contain;"></div>
                 <div class="card-content">
                     <div class="card-title">Computer Application Development</div>
