--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
 
     <main>
         <!-- Web Development -->
-        <h2 class="text-white h2-lower" id="webDeveloper">Web Development</h2>
+        <h2 class="text-white h2-lower" id="web-developer">Web Development</h2>
         <section class="webdev">
             <div class="upper-img" style="background: url(raw-data/svg/ASP.NET.svg); background-size: contain;"></div>
             <div class="lower-content">
@@ -124,7 +124,7 @@
         </section>
 
         <!-- Computer Application Development -->
-        <h2 class="text-white h2-lower" id="desktopAppDeveloper">Computer Application Development</h2>
+        <h2 class="text-white h2-lower" id="desktop-app-developer">Computer Application Development</h2>
         <section class="webdev">
             <div class="upper-img" style="background: url(raw-data/img/cs.png); background-size: contain;"></div>
             <div class="lower-content">
