Fix Front Picture and some wrong grammar

--- a/exp-pages/1yr-pbts.html
+++ b/exp-pages/1yr-pbts.html
@@ -137,7 +137,7 @@
                 </a>
                 <h2>BIB Tester Windows Form</h2>
                 <p class="exp-para">
-                    The name of the department where I in in PBTS is BSS (Business System Support), and the Head there
+                    The name of the department where I am in PBTS is BSS (Business System Support), and the Head there
                     is a
                     Windows Programmer for a long time. And he is also developing while managing us. He always
                     ask me to make a single Windows Form from Visual Studio 2010 and C# Programming Language, to add to
